syntax = "proto3";

package v1;

import "api/v1/empty.proto";
import weak "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "v1";

message TimeRange {
    google.protobuf.Timestamp from = 1;
    google.protobuf.Timestamp to   = 2;
}

message SecuredUnits {
    int64 num_nodes                     = 1;
    int64 num_cpu_units                 = 2;
}

message CurrentProductUsageResponse {
    google.protobuf.Timestamp timestamp = 1;
    SecuredUnits secured_units          = 2;
}

message MaxSecuredUnitsUsageResponse {
    google.protobuf.Timestamp max_nodes_at     = 1;
    int64 max_nodes                            = 2;
    google.protobuf.Timestamp max_cpu_units_at = 3;
    int64 max_cpu_units                        = 4;
}

service ProductUsageService {
    // GetCurrentProductUsage
    //
    // Returns current usage, with about 5 minutes accuracy.
    rpc GetCurrentProductUsage(v1.Empty) returns (CurrentProductUsageResponse) {
        option (google.api.http) = {
            get: "/v1/product/usage/current"
        };
    }

    // GetMaxSecuredUnitsUsage
    //
    // Returns maximum, i.e. peak, usage for the given time frame together
    // with the time when this maximum was observed.
    rpc GetMaxSecuredUnitsUsage(TimeRange) returns (MaxSecuredUnitsUsageResponse) {
        option (google.api.http) = {
            get: "/v1/product/usage/max_secured_units"
        };
    }
}
